k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diggai-takios
  labels:
    name: diggai-takios
    environment: production
